:recycle: refactor: Rename some classes and parameters
